[package]
name = "onsen"
version = "0.14.0"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "Memory pool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/onsen.git"
keywords = ["allocator", "pool"]
categories = ["memory-management"]

[features]
# TBox, using threadcell::ThreadCell/STPool
default = ["st_tbox"]

# TBox, using std::sync::Mutex/TPool
#default = ["tbox"]

# TBox, using parking_lot::Mutex/TPool
#default = ["tbox", "parking_lot"]

tbox = ["dep:assoc_static"]
stpool = ["dep:threadcell"]
st_tbox = ["tbox", "stpool"]


[dependencies]
assoc_static = { version = "1.0.0", optional = true}
parking_lot = { version = "0.12.0", optional = true}
threadcell = { version = "0.8.1", optional = true}
mutants = "0.0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}
serial_test = "0.10.0"

[[bench]]
name = "basicbox"
harness = false

#
# [[bench]]
# name = "baseline"
# harness = false
# 
[[bench]]
name = "simulated_work"
harness = false

[badges]
maintenance = { status = "actively-developed" }

